--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>hadoop-project</module>
         <module>hive-project2</module>
+        <module>spark-project</module>
     </modules>
 
 
