flink本地运行示例

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>hive-project2</module>
         <module>spark-project</module>
         <module>storm-project</module>
+        <module>flink-project</module>
     </modules>
 
 
