--- a/storm-project/pom.xml
+++ b/storm-project/pom.xml
@@ -49,6 +49,17 @@
                 </executions>
             </plugin>
 
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
